--- a/public/app/themes/cross_hatch/style_gridless.css
+++ b/public/app/themes/cross_hatch/style_gridless.css
@@ -231,3 +231,7 @@
 .circle-cell-15 {
   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M -2 6, H 0, A 6 6 0 0 0 6 0, V -2, H 20, V 0, A 6 6 0 0 0 26 6, H 28, V 20, A 6 6 0 0 0 20 26, V 28, H 6, V 26, A 6 6 0 0 0 0 20, H -2, z' fill='rgb(255, 0, 0)' stroke-width='3' stroke='rgb(150, 0, 0)'/></svg>");
 }
+
+.text-cell {
+  text-shadow: -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white, 2px 2px 0 white;
+}
