--- a/public/app/themes/old_school/style.css
+++ b/public/app/themes/old_school/style.css
@@ -180,3 +180,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.text-cell {
+  text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
+}
